prometheus (1.2.3+ds2-2) UNRELEASED; urgency=medium

  * Fix the new datetime picker control (was not working at all).

 -- Martín Ferrari <tincho@debian.org>  Thu, 10 Nov 2016 19:04:15 +0100

prometheus (1.2.3+ds2-1) unstable; urgency=high

  * The "We had all the monitoring and alerting, yet the worst still happened"
    release.
  * New source release, removing the vendoring of bootstrap-datetimepicker.
  * Switch to golang-google-cloud-compute-metadata-dev dep.
  * Backport math fixes from 1.3.1 that fix build issues in armel (raising
    urgency). Hopefully prometheus will enter testing again now.

 -- Martín Ferrari <tincho@debian.org>  Wed, 09 Nov 2016 21:07:14 +0000

prometheus (1.2.3+ds-2) unstable; urgency=medium

  * Correct extra unneeded deps (the relevant parts are already vendored-in).

 -- Martín Ferrari <tincho@debian.org>  Fri, 04 Nov 2016 00:54:10 +0000

prometheus (1.2.3+ds-1) unstable; urgency=medium

  * New upstream release, containing a few bugfixes.
  * Add minimum version for jquery dependency (relevant for backports).
  * Re-vendor github.com/hashicorp/consul until the Debian package is
    stable.
  * Remove unneeded build-deps.
  * Update dependency on golang-github-miekg-dns-dev.

 -- Martín Ferrari <tincho@debian.org>  Thu, 03 Nov 2016 23:45:07 +0000

prometheus (1.2.2+ds-1) unstable; urgency=medium

  * New upstream release.

 -- Martín Ferrari <tincho@debian.org>  Mon, 31 Oct 2016 22:26:59 +0000

prometheus (1.2.1+ds-1) unstable; urgency=medium

  * New upstream release.
  * Update dependencies.
  * Refresh patches.
  * Unvendor jquery and replace with Debian's packaged version.
  * Update prometheus-common dependency.

 -- Martín Ferrari <tincho@debian.org>  Sun, 23 Oct 2016 20:21:28 +0000

prometheus (1.1.3+ds-1) unstable; urgency=medium

  * New upstream release.
  * Switch away from node-less as it has bad arch support.

 -- Martín Ferrari <tincho@debian.org>  Sun, 02 Oct 2016 16:52:48 +0000
