@@ -103,7 +103,7 @@
  <script src="{{ pathPrefix }}/static/js/prom_console.js"></script>
 --- a/web/ui/templates/graph.html
 +++ b/web/ui/templates/graph.html
-@@ -1,18 +1,18 @@
+@@ -1,22 +1,20 @@
  {{define "head"}}
      <link type="text/css" rel="stylesheet" href="{{ pathPrefix }}/static/css/graph.css">
  
@@ -124,13 +124,17 @@
 +    <script src="{{ pathPrefix }}/static/vendor/bootstrap3-typeahead/bootstrap3-typeahead.js"></script>
  
 -    <script src="{{ pathPrefix }}/static/vendor/js/handlebars.js"></script>
-+    <script src="{{ pathPrefix }}/static/handlebars/handlebars.js"></script>
++    <script src="{{ pathPrefix }}/static/mustache/mustache.min.js"></script>
      <script src="{{ pathPrefix }}/static/vendor/js/jquery.selection.js"></script>
 -    <script src="{{ pathPrefix }}/static/vendor/js/jquery.hotkeys.js"></script>
 +    <script src="{{ pathPrefix }}/static/jquery-hotkeys/jquery.hotkeys.js"></script>
  
      <script src="{{ pathPrefix }}/static/js/graph.js?v=1"></script>
+-
+-    <script id="graph_template" type="text/x-handlebars-template"></script>
+ {{end}}
  
+ {{define "content"}}
 --- a/web/ui/templates/_base.html
 +++ b/web/ui/templates/_base.html
 @@ -3,10 +3,10 @@
@@ -163,6 +167,26 @@
  	)
 --- a/web/ui/static/js/graph.js
 +++ b/web/ui/static/js/graph.js
+@@ -3,8 +3,6 @@
+ 
+ var SECOND = 1000;
+ 
+-Handlebars.registerHelper('pathPrefix', function() { return PATH_PREFIX; });
+-
+ Prometheus.Graph = function(element, options, handleChange, handleRemove) {
+   this.el = element;
+   this.graphHTML = null;
+@@ -48,7 +46,9 @@
+ 
+   // Draw graph controls and container from Handlebars template.
+ 
+-  self.graphHTML = $(graphTemplate(self.options));
++  var options = {'pathPrefix': PATH_PREFIX};
++  jQuery.extend(options, self.options);
++  self.graphHTML = $(Mustache.render(graphTemplate, options));
+   self.el.append(self.graphHTML);
+ 
+   // Get references to all the interesting elements in the graph container and
 @@ -110,13 +110,18 @@
  
    self.endDate = graphWrapper.find("input[name=end_input]");
@@ -224,3 +248,14 @@
    self.submitQuery();
  };
  
+@@ -778,7 +787,9 @@
+   $.ajax({
+     url: PATH_PREFIX + "/static/js/graph_template.handlebar",
+     success: function(data) {
+-      graphTemplate = Handlebars.compile(data);
++
++      graphTemplate = data;
++      Mustache.parse(data);
+       if (isDeprecatedGraphURL()) {
+         redirectToMigratedURL();
+       } else {
