@@ -1,6 +1,7 @@
 prometheus (1.2.3+ds2-2) UNRELEASED; urgency=medium
 
   * Fix the new datetime picker control (was not working at all).
+  * Replace libjs-handlebars with libjs-mustache. Closes: #835661.
 
  -- Martín Ferrari <tincho@debian.org>  Thu, 10 Nov 2016 19:04:15 +0100
 
